--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "update",
+	"name": "open_weather",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev --host",
+		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview"
 	},
